# BlobNet

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
GombNet/: __init__.py  real_image.py  synthetic.py  visualization.py
blobnet/: __init__.py  loss_func.py  metrics.py  networks.py  synthetic.py  utils.py  visualization.py
configs/dataset_configs/: hexagonal.yaml  hexagonal_measured.yaml  random.yaml  random_dense.yaml  random_measured.yaml  random_microscope.yaml  square.yaml  square_measured.yaml  test.yaml  testing copy.yaml
configs/model_configs/: base_unet.yaml  hexagonal_measured_unet.yaml  hexagonal_unet.yaml  random_dense_unet.yaml  random_measured_unet.yaml  random_unet.yaml  square_measured_unet.yaml  square_unet.yaml  unet.yaml
experimental_data/: 0042 - 20250226 6.10 Mx STEM HAADF Diffraction 16.4 nm.emd  0050 - STEM Nano Diffraction HAADF 12.0 Mx 8.2 nm.emd  WS2.emd
notebooks/: dataset_browser.ipynb  emd_reader.ipynb  figure5_noise_threshold_playground.ipynb  material_dataset_study_replot.ipynb  periodic_lattice_performance.ipynb
outputs/dataset_study_10epoch/: study_config.json
outputs/inhom_background_unet_20epoch/: benchmark_metrics.csv  benchmark_metrics.json
outputs/inhom_background_unet_20epoch/real_image/: real_image_summary.json
scripts/: __init__.py  generate_training_dataset.py  make_manuscript_figures.py  measure_experimental_features.py  run_distribution_regime_sweep.py  run_pixel_size_sweep.py  train_manuscript_models.py  train_unet.py
training_scripts/: __init__.py  analyze_real_image.py  check_mps.py  compare_pretrained_models.py  export_examples.py  export_low_count_demo.py  export_material_dataset_examples.py  external_model_adapters.py  generate_dataset.py  io_utils.py  material_dataset_configs.py  run_blobnet_on_emd_folder.py  run_dataset_study.py  run_material_dataset_study.py  sweep_blobnet_pixel_size.py  train_unet.py
