[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blobnet"
version = "0.1.0"
description = "Edge-aware synthetic-data generation, U-Net training, and visualization tools for atom localization in atomic-resolution STEM images."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.23",
    "h5py>=3.10",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "matplotlib>=3.7",
    "notebook>=7.2",
    "numpy>=1.24",
    "pillow>=9.4",
    "pytemlib>=0.2026.6.0",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "torch>=2.1",
    "torchvision>=0.16",
]

[project.scripts]
blobnet-generate-dataset = "scripts.generate_training_dataset:main"
blobnet-train = "scripts.train_unet:main"
blobnet-manuscript-figures = "scripts.make_manuscript_figures:main"
blobnet-train-manuscript = "scripts.train_manuscript_models:main"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools]
packages = ["blobnet", "scripts"]
